# proxyguard

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  proxies.example.txt  pyproject.toml
site/: index.html
src/proxy_guard/: auth.py  config.py  core_logging.py  dashboard.html  server.py  upstream.py
tests/: test_auth.py  test_server_auth_toggle.py  test_server_retry.py  test_upstream.py
